<package>
  <name>osx_joystick</name>
  <version>0.0.0</version>
  <description>

     Joystick driver for OSX.

  </description>
  <author>Kevin Walchko</author>
  <copyright>Kevin Walchko</copyright>
  <maintainer email="kevin@todo.todo">kevin</maintainer>
  <license>BSD</license>
  
  <url>http://github.com/walchko/osx_joystick</url>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>glfw</build_depend>

</package>


